<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity">

    <LinearLayout
       android:id="@+id/linearlayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:text="@string/login"
            android:layout_weight="1"
            android:padding="15dp"
            android:textAlignment="center"
            android:textColor="#C6C6C6"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/sign_up"
            android:background="@drawable/background_sign_in_text"
            android:padding="15dp"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"/>
    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/linearlayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_n_acoount"
                android:textColor="@color/dark_red"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:drawableRight="@drawable/ic_baseline_person_24"
                android:hint="John Doe"
                android:id="@+id/et_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

            <EditText
                android:drawableRight="@drawable/ic_baseline_email_24"
                android:hint="johndoe@gmail.com"
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/contact_no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />


            <com.hbb20.CountryCodePicker

                android:id="@+id/countrycodepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:ccp_areaCodeDetectedCountry="true"
                app:ccp_autoDetectCountry="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"/>

            <EditText
                android:drawableRight="@drawable/ic_baseline_phone_24"
                android:hint="98XXXXXXXX"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@id/countrycodepicker"
                app:layout_constraintBottom_toBottomOf="@id/countrycodepicker"
                app:layout_constraintStart_toEndOf="@id/countrycodepicker"
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:maxEms="10"
                android:inputType="phone"
              />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countrycodepicker" />

            <EditText
                android:drawableRight="@drawable/ic_baseline_lock_24"
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="********"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:layout_marginTop="20dp"
                android:id="@+id/cb_terms_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:drawablePadding="30dp"
                android:paddingStart="30dp"
                android:text="@string/i_agree_with_terms_amp_condition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_terms_and_condition" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:id="@+id/btn_register"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/background_sign_in_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>